--- a/website/newsletter/117/_react.mdx
+++ b/website/newsletter/117/_react.mdx
@@ -1,30 +1,30 @@
 **[React I Love You, But You're Bringing Me Down](https://marmelab.com/blog/2022/09/20/react-i-love-you.html)**
 
-L'auteur de React-Admin donne une critique juste de React sur de nombreux aspects (forms, useContextSelector, refs, deps array...). Ne manquez pas la [réponse de Dan Abramov](https://twitter.com/dan_abramov/status/1572590212647391235).
+The author of React-Admin gives a fair criticism of React on many aspects (forms, useContextSelector, refs, deps array...). Don't miss [Dan Abramov's response](https://twitter.com/dan_abramov/status/1572590212647391235).
 
 **[Next.js Layouts RFC in 5 minutes](https://vercel.com/blog/next-js-layouts-rfc-in-5-minutes)**
 
-Le routeur Next.js basé sur le file-system va être significativement upgradé dans la prochaine version majeure. On y trouve notament un support des nested layouts, comme dans Remix. Cela permet d'éviter les unmount/remount non nécessaires d'un layout lors des navigations, mais aussi de gérer les chargements de données et les erreurs. Cet article donne une rapide vision d'ensemble. Voir aussi le [thread de Delba](https://twitter.com/delba_oliveira/status/1568291558776274945).
+The file-system based Next.js router will be significantly upgraded in the next major release. It includes support for nested layouts (like in Remix). This allows to avoid unnecessary unmount/remount of a layout during browsing, but also to manage data loading and errors. This article gives a quick overview. See also [Delba's thread](https://twitter.com/delba_oliveira/status/1568291558776274945).
 
 **[React Router 6.4](https://remix.run/blog/react-router-v6.4)**
 
-Grosse update: comme prévu, de nombreuses APIs de Remix (data-loading, mutation...) ont été déplacées dans React-Router. Voir la [video de 2min](https://www.youtube.com/watch?v=aX74DbFT5nI)
+Big update: as expected, many Remix APIs (data-loading, mutation...) have finally been moved to React-Router. See the [2min video](https://www.youtube.com/watch?v=aX74DbFT5nI)
 
 **[What’s New In Gatsby 2022?](https://www.smashingmagazine.com/2022/09/new-gatsby-2022/)**
 
-Paul a upgradé son blog vers la dernière version Gatsby v4 et nous partage comment il a utilisé les toutes dernieres features. Deferred Static Generation permet de réduire significativement le temps de build. Voir aussi [Gatsby 5 Umbrella Discussion](https://github.com/gatsbyjs/gatsby/discussions/36609) et la video [Gatsby v5 Alpha Showcase](https://www.youtube.com/watch?v=C-WrnfUm33k): le support de partial hydration arrive!
+Paul upgraded his blog to the latest Gatsby v4 version and shares with us how he used the latest features. Deferred Static Generation can significantly reduce build time. See also [Gatsby 5 Umbrella Discussion](https://github.com/gatsbyjs/gatsby/discussions/36609) and the video [Gatsby v5 Alpha Showcase](https://www.youtube.com/watch?v=C-WrnfUm33k): partial hydration is coming!
 
 **Extras**:
 
 - 🧑‍🎓Beta docs: [useCallback](https://twitter.com/dan_abramov/status/1570021510659579904) + [useMemo](https://twitter.com/dan_abramov/status/1568602727147520000)
-- 💬 [useEvent update](https://github.com/reactjs/rfcs/pull/220#issuecomment-1259938816): le prototype `useEvent` est implémenté et disponible via `@experimental`. Quelques préoccupations vont conduire à l'ouverture d'une nouvelle RFC. Si je comprends bien il est possible que ce hook ne soit jamais releasé mais qu'une autre solution soit adopté.
+- 💬 [useEvent update](https://github.com/reactjs/rfcs/pull/220#issuecomment-1259938816): the `useEvent` prototype is implemented and available via `@experimental`. Some concerns will lead to the opening of a new RFC. If I understand correctly it is possible that this hook will never be released but another solution will be adopted.
 - 💬 [Dan Abramov - "in what ways is react 18 faster than react 17?"](https://www.reddit.com/r/reactjs/comments/xmr9tg/comment/ippsuin/)
-- 📜 [The new wave of Javascript web frameworks](https://frontendmastery.com/posts/the-new-wave-of-javascript-web-frameworks/): un bon aperçu de l'écosystème frontend de Flash jusqu'a aujourd'hui. Focus sur React et ses différents challengers: Vue, Svelte, Solid, Qwik, Astro, Fresh...
-- 📜 [Get in Zoomer, We're Saving React](https://acko.net/blog/get-in-zoomer-we-re-saving-react/): article avec des idées intéressantes. Je j'ai pas bien compris quelle est la conclusion à part que React peut faire mieux et ses challengers n'améliorent pas vraiment les choses 😅
-- 📜 [useState with URLs: How to persist state with useSearchParams](https://blog.logrocket.com/use-state-url-persist-state-usesearchparams/): explique pourquoi et comment persister votre state React en querystring
-- 📜 [An apparent React bug](https://phelipetls.github.io/posts/surprising-react-bug/): lié au comportement de l'élément `<details>`
+- 📜 [The new wave of Javascript web frameworks](https://frontendmastery.com/posts/the-new-wave-of-javascript-web-frameworks/): a good overview of the frontend ecosystem of Flash until today. Focus on React and its various challengers: Vue, Svelte, Solid, Qwik, Astro, Fresh...
+- 📜 [Get in Zoomer, We're Saving React](https://acko.net/blog/get-in-zoomer-we-re-saving-react/): article with interesting ideas. I didn't quite understand what the conclusion is except that React can do better and its challengers don't really improve things 😅
+- 📜 [useState with URLs: How to persist state with useSearchParams](https://blog.logrocket.com/use-state-url-persist-state-usesearchparams/): explains how and why to persist React state in querystring
+- 📜 [An apparent React bug](https://phelipetls.github.io/posts/surprising-react-bug/): related to behavior of the `<details>` element
 - 📜 [When to use “useImperativeHandle” and “forwardRefs” in React 18](https://betterprogramming.pub/when-to-use-useimperativehandle-and-forwardrefs-in-react-18-89cce42b3309)
-- 📜 [I18n with Storybook](https://storybook.js.org/blog/internationalize-components-with-storybook/): montre comment apporter un support complet i18n dans Storybook: dropdown de locale dans la navbar, support RTL...
+- 📜 [I18n with Storybook](https://storybook.js.org/blog/internationalize-components-with-storybook/): shows how to bring full i18n support in Storybook: locale dropdown switch, RTL support...
 - 📜 [Storybook community showcase #3](https://storybook.js.org/blog/community-showcase-3/)
 - 📜 [The Basics of Remix](https://css-tricks.com/the-basics-of-remix/)
 - 📜 [React and Observables from RxDB](https://www.sabre.com/locations/poland/react-and-observables-from-rxdb/)
@@ -34,13 +34,13 @@ Paul a upgradé son blog vers la dernière version Gatsby v4 et nous partage com
 - 🎥 React Finland [day 1](https://www.youtube.com/watch?v=zE8PDM_7xoQ) + [day 2](https://www.youtube.com/watch?v=rHjwZu0EmlQ)
 - 🎥 [5 Pro-Level React Do's & Don'ts](https://www.youtube.com/watch?v=4FhJkX18fS8)
 - 🎥 [freeCodeCamp - Code a Minecraft Clone with JavaScript, React, Three.js](https://www.youtube.com/watch?v=qpOZup_3P_A)
-- 🐦 [React is focused on the problems that matter more](https://twitter.com/heyImMapleLeaf/status/1567960223759093760): conversations intéressantes, avec une réponse de [Evan You](https://twitter.com/youyuxi/status/1569485243077529602)
+- 🐦 [React is focused on the problems that matter more](https://twitter.com/heyImMapleLeaf/status/1567960223759093760): interesting conversations. See also [Evan You](https://twitter.com/youyuxi/status/1569485243077529602) comment.
 - 🐦 [React form without useState](https://twitter.com/DavidKPiano/status/1569361453928300545)
 - 🚧 [MUI Base: the headless alternative to Material UI](https://twitter.com/MUI_hq/status/1570695041034731520)
 - 🎙️ [JS Party #244 - The spicy React debate show 🌶️](https://changelog.com/jsparty/244)
-- 📦 [Its fine](https://github.com/pmndrs/its-fine): une collection de escape hatches avancés pour React. Utile pour [bridger le context React entre les renderers dans l'écosystème React-Three-Fiber](https://twitter.com/0xca0a/status/1573064826339094528)
-- 📦 [Theatre.js v0.5](https://www.theatrejs.com/blog/theatre-05-is-out): un éditeur 3D compatible React-Three-Fiber
-- 📦 [TinyBase 2.0](https://twitter.com/tinybasejs/status/1570864399728136193): reactive datastore avec bindings React
-- 📦 [React-Tether 3.0](https://github.com/danreeves/react-tether/releases/tag/v3.0.0): une des toutes premières libs de positionnement pour React semble reprendre de l'activité
-- 📦 [TanStack Query 4.4](https://github.com/TanStack/query/releases/tag/v4.4.0): découplé de React, apporte le support d'un autre framework, SolidJS.
-- 🥳️ [Next.js a mergé 10000 pull-requests](https://twitter.com/github/status/1574750716966498304)
+- 📦 [Its fine](https://github.com/pmndrs/its-fine): a collection of advanced escape hatches for React. Useful for [bridging React context between renderers in the React-Three-Fiber ecosystem](https://twitter.com/0xca0a/status/1573064826339094528)
+- 📦 [Theatre.js v0.5](https://www.theatrejs.com/blog/theatre-05-is-out): new 3D editor, useful for React-Three-Fiber
+- 📦 [TinyBase 2.0](https://twitter.com/tinybasejs/status/1570864399728136193): reactive datastore with React bindings
+- 📦 [React-Tether 3.0](https://github.com/danreeves/react-tether/releases/tag/v3.0.0): one of the very first positioning libs for React seems to be back in business
+- 📦 [TanStack Query 4.4](https://github.com/TanStack/query/releases/tag/v4.4.0): decoupled from React, brings the support of another framework: SolidJS.
+- 🥳️ [Next.js merged 10000 pull-requests](https://twitter.com/github/status/1574750716966498304)
