--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
@@ -1,10 +1,10 @@
 **[RFC: File System-Based Native Routing with Expo and React Native](https://blog.expo.dev/rfc-file-system-based-routing-in-react-native-7a35474722a)**
 
-Evan Bacon travaille sur un nouveau routeur Expo basé sur des conventions file-system, similaires à Next.js ou Remix. Il nous explique tout ce qu'il faut savoir sur cette feature très attendue qui apporte la DX du web sur mobile. Cela devrait réduire considérablement le boilerplate de nos apps, mais aussi améliorer la discoverabilité, le deep linking, l'indexation, la gestion des erreurs... Tout ça de manière cross-platform. Pour en savoir plus, lire aussi ce [thread](https://twitter.com/Baconbrix/status/1574837248029331495) et écouter ce podcast [podcast](https://podrocket.logrocket.com/expo-router)
+Evan Bacon travaille sur un nouveau routeur Expo basé sur des conventions file-system, similaires à Next.js ou Remix. Il nous explique tout ce qu'il faut savoir sur cette feature très attendue qui apporte la DX du web sur mobile. Cela devrait réduire considérablement le boilerplate de nos apps, mais aussi améliorer la discoverabilité, le deep linking, l'indexation, le chargement de données, la gestion des erreurs... Lire aussi ce [thread](https://twitter.com/Baconbrix/status/1574837248029331495) et écouter ce [podcast](https://podrocket.logrocket.com/expo-router).
 
 - 📦 [Announcing Ignite 8.0: “Maverick”](https://shift.infinite.red/announcing-ignite-8-0-maverick-fbbdafbb738e). Le boilerplate React-Native de InfiniteRed est très populaire reçoit une belle mise à jour. Nombreuses améliorations: unification Expo/Vanilla RN, redesign, i18n...
 - 📦 [FlashList 1.3 - MasonryFlashList](https://twitter.com/naqvitalha/status/1574416547426496513): pour reproduire un layout grid type Masonry/Pinterest en React-Native
-- 🥳️ [Les types TypeScripts ont été internalisés dans React-Natiuve 0.71](https://twitter.com/thymikee/status/1572132314280300546). Plus besoin de `@types/react-native`.
+- 🥳️ [Les types TypeScripts ont été internalisés dans v0.71](https://twitter.com/thymikee/status/1572132314280300546). Plus besoin de `@types/react-native`.
 - 🥳️ [React-Native passe la barre des 1M downloads/week](https://twitter.com/thymikee/status/1574441040626552832)
 - 🐦 [0.70: amélioration notable des stacktraces](https://twitter.com/thymikee/status/1568257655323475972)
 - 🎨 [Amazon Interactive Video Service demo](https://twitter.com/nightstomp/status/1572576326934208513): React-Native plus performant que TikTok?
