--- a/website/src/pages/workflow/confirm-your-email.mdx
+++ b/website/src/pages/workflow/confirm-your-email.mdx
@@ -4,7 +4,7 @@ Please confirm your email address to validate your subscription
 
 :::tip Check your spam folder
 
-If you don't receive any confirmation email from us, maybe check your spam folder?
+If you don't receive any confirmation email, check your spam folder 😅
 
 The email will come from `sebastien@thisweekinreact.com`
 
