--- a/website/src/pages/workflow/thanks-for-subscribing.mdx
+++ b/website/src/pages/workflow/thanks-for-subscribing.mdx
@@ -6,4 +6,4 @@ In the meantime you can take a look at:
 
 - the [articles](/articles)
 - the [previous newsletter issues](/newsletter)
-- the [Twitter thread](https://slo.im/thread)
+- the [latest Twitter thread](https://slo.im/thread)
