--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -2,38 +2,38 @@
 slug: template
 title: "📨 #TEMPLATE: ..."
 authors: [slorber]
-date: 01-01-2030
+date: 12-31-2022
 image: /img/TWIR_POST.png
 draft: true
 ---
 
 Salut à tous !
 
-<Todo/>
+<Todo />
 
 <!-- truncate -->
 
 ---
 
-import Support from "../_support.mdx"
+import Support from "../_support.mdx";
 
-<Support/>
+<Support />
 
 ---
 
 ## 💸 Sponsor {#sponsor1}
 
-import Sponsor1 from "./_sponsor1.mdx"
+import Sponsor1 from "./_sponsor1.mdx";
 
-<Sponsor1/>
+<Sponsor1 />
 
 ---
 
 ## ⚛️ React {#react}
 
-import ReactContent from "./_react.mdx"
+import ReactContent from "./_react.mdx";
 
-<ReactContent/>
+<ReactContent />
 
 <SubscribeFormEmbed />
 
@@ -41,25 +41,25 @@ import ReactContent from "./_react.mdx"
 
 ## 💸 Sponsor {#sponsor2}
 
-import Sponsor2 from "./_sponsor2.mdx"
+import Sponsor2 from "./_sponsor2.mdx";
 
-<Sponsor2/>
+<Sponsor2 />
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-import ReactNativeContent from "./_reactnative.mdx"
+import ReactNativeContent from "./_reactnative.mdx";
 
-<ReactNativeContent/>
+<ReactNativeContent />
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-import Jobs from "./_jobs.mdx"
+import Jobs from "./_jobs.mdx";
 
-<Jobs/>
+<Jobs />
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
@@ -67,12 +67,12 @@ import Jobs from "./_jobs.mdx"
 
 ## 🔀 Autre {#other}
 
-import OtherContent from "./_other.mdx"
+import OtherContent from "./_other.mdx";
 
-<OtherContent/>
+<OtherContent />
 
 ---
 
-import Meme from "./_meme.mdx"
+import Meme from "./_meme.mdx";
 
-<Meme/>
+<Meme />
