--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -23,17 +23,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-import Sponsor1 from "./_sponsor1.mdx";
-
-<Sponsor1 />
+<Todo />
 
 ---
 
 ## ⚛️ React {#react}
 
-import ReactContent from "./_react.mdx";
-
-<ReactContent />
+<Todo />
 
 <SubscribeFormEmbed />
 
@@ -41,25 +37,19 @@ import ReactContent from "./_react.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-import Sponsor2 from "./_sponsor2.mdx";
-
-<Sponsor2 />
+<Todo />
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-import ReactNativeContent from "./_reactnative.mdx";
-
-<ReactNativeContent />
+<Todo />
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-import Jobs from "./_jobs.mdx";
-
-<Jobs />
+<Todo />
 
 💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
 
@@ -67,12 +57,8 @@ import Jobs from "./_jobs.mdx";
 
 ## 🔀 Other {#other}
 
-import OtherContent from "./_other.mdx";
-
-<OtherContent />
+<Todo />
 
 ---
 
-import Meme from "./_meme.mdx";
-
-<Meme />
+<Todo />
