--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
@@ -26,17 +26,64 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-import Sponsor1 from "./_sponsor1.mdx";
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr)
 
-<Sponsor1 />
+Avez-vous déjà essayé [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) ? C'est le CMS headless avec un éditeur visuel conçu pour les développeurs et les spécialistes du marketing !
+
+Utilisez Storyblok React SDK pour construire rapidement des composants réutilisables et récupérer le contenu pour créer vos applications, sites Web ou eCommerces React, Next.js, Remix, ou même React-Native.
+
+Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) et découvrez-le vous-même !
 
 ---
 
 ## ⚛️ React {#react}
 
-import ReactContent from "./_react.mdx";
+**[React I Love You, But You're Bringing Me Down](https://marmelab.com/blog/2022/09/20/react-i-love-you.html)**
 
-<ReactContent />
+L'auteur de React-Admin donne une critique juste de React sur de nombreux aspects (forms, useContextSelector, refs, deps array...). Ne manquez pas la [réponse de Dan Abramov](https://twitter.com/dan_abramov/status/1572590212647391235).
+
+**[Next.js Layouts RFC in 5 minutes](https://vercel.com/blog/next-js-layouts-rfc-in-5-minutes)**
+
+Le routeur Next.js basé sur le file-system va être significativement upgradé dans la prochaine version majeure. On y trouve notament un support des nested layouts, comme dans Remix. Cela permet d'éviter les unmount/remount non nécessaires d'un layout lors des navigations, mais aussi de gérer les chargements de données et les erreurs. Cet article donne une rapide vision d'ensemble. Voir aussi le [thread de Delba](https://twitter.com/delba_oliveira/status/1568291558776274945).
+
+**[React Router 6.4](https://remix.run/blog/react-router-v6.4)**
+
+Grosse update: comme prévu, de nombreuses APIs de Remix (data-loading, mutation...) ont été déplacées dans React-Router. Voir la [video de 2min](https://www.youtube.com/watch?v=aX74DbFT5nI)
+
+**[What’s New In Gatsby 2022?](https://www.smashingmagazine.com/2022/09/new-gatsby-2022/)**
+
+Paul a upgradé son blog vers la dernière version Gatsby v4 et nous partage comment il a utilisé les toutes dernieres features. Deferred Static Generation permet de réduire significativement le temps de build. Voir aussi [Gatsby 5 Umbrella Discussion](https://github.com/gatsbyjs/gatsby/discussions/36609) et la video [Gatsby v5 Alpha Showcase](https://www.youtube.com/watch?v=C-WrnfUm33k): le support de partial hydration arrive!
+
+**Extras**:
+
+- 🧑‍🎓Beta docs: [useCallback](https://twitter.com/dan_abramov/status/1570021510659579904) + [useMemo](https://twitter.com/dan_abramov/status/1568602727147520000)
+- 💬 [useEvent update](https://github.com/reactjs/rfcs/pull/220#issuecomment-1259938816): le prototype `useEvent` est implémenté et disponible via `@experimental`. Quelques préoccupations vont conduire à l'ouverture d'une nouvelle RFC. Si je comprends bien il est possible que ce hook ne soit jamais releasé mais qu'une autre solution soit adopté.
+- 💬 [Dan Abramov - "in what ways is react 18 faster than react 17?"](https://www.reddit.com/r/reactjs/comments/xmr9tg/comment/ippsuin/)
+- 📜 [The new wave of Javascript web frameworks](https://frontendmastery.com/posts/the-new-wave-of-javascript-web-frameworks/): un bon aperçu de l'écosystème frontend de Flash jusqu'a aujourd'hui. Focus sur React et ses différents challengers: Vue, Svelte, Solid, Qwik, Astro, Fresh...
+- 📜 [Get in Zoomer, We're Saving React](https://acko.net/blog/get-in-zoomer-we-re-saving-react/): article avec des idées intéressantes. Je j'ai pas bien compris quelle est la conclusion à part que React peut faire mieux et ses challengers n'améliorent pas vraiment les choses 😅
+- 📜 [useState with URLs: How to persist state with useSearchParams](https://blog.logrocket.com/use-state-url-persist-state-usesearchparams/): explique pourquoi et comment persister votre state React en querystring
+- 📜 [An apparent React bug](https://phelipetls.github.io/posts/surprising-react-bug/): lié au comportement de l'élément `<details>`
+- 📜 [When to use “useImperativeHandle” and “forwardRefs” in React 18](https://betterprogramming.pub/when-to-use-useimperativehandle-and-forwardrefs-in-react-18-89cce42b3309)
+- 📜 [I18n with Storybook](https://storybook.js.org/blog/internationalize-components-with-storybook/): montre comment apporter un support complet i18n dans Storybook: dropdown de locale dans la navbar, support RTL...
+- 📜 [Storybook community showcase #3](https://storybook.js.org/blog/community-showcase-3/)
+- 📜 [The Basics of Remix](https://css-tricks.com/the-basics-of-remix/)
+- 📜 [React and Observables from RxDB](https://www.sabre.com/locations/poland/react-and-observables-from-rxdb/)
+- 📜 [Automated Rule Docs With Docusaurus and Remark](https://typescript-eslint.io/blog/automated-rule-docs-with-docusaurus-and-remark/)
+- 📜 [Me & React: 5 Years in 15 Minutes](https://valeriavg.dev/me-and-react-5-years-in-15-minutes)
+- 🐦 [Mitosis - Write components with Sveltejs syntax, compile to other frameworks d](https://twitter.com/Steve8708/status/1573444026006585345)
+- 🎥 React Finland [day 1](https://www.youtube.com/watch?v=zE8PDM_7xoQ) + [day 2](https://www.youtube.com/watch?v=rHjwZu0EmlQ)
+- 🎥 [5 Pro-Level React Do's & Don'ts](https://www.youtube.com/watch?v=4FhJkX18fS8)
+- 🎥 [freeCodeCamp - Code a Minecraft Clone with JavaScript, React, Three.js](https://www.youtube.com/watch?v=qpOZup_3P_A)
+- 🐦 [React is focused on the problems that matter more](https://twitter.com/heyImMapleLeaf/status/1567960223759093760): conversations intéressantes, avec une réponse de [Evan You](https://twitter.com/youyuxi/status/1569485243077529602)
+- 🐦 [React form without useState](https://twitter.com/DavidKPiano/status/1569361453928300545)
+- 🚧 [MUI Base: the headless alternative to Material UI](https://twitter.com/MUI_hq/status/1570695041034731520)
+- 🎙️ [JS Party #244 - The spicy React debate show 🌶️](https://changelog.com/jsparty/244)
+- 📦 [Its fine](https://github.com/pmndrs/its-fine): une collection de escape hatches avancés pour React. Utile pour [bridger le context React entre les renderers dans l'écosystème React-Three-Fiber](https://twitter.com/0xca0a/status/1573064826339094528)
+- 📦 [Theatre.js v0.5](https://www.theatrejs.com/blog/theatre-05-is-out): un éditeur 3D compatible React-Three-Fiber
+- 📦 [TinyBase 2.0](https://twitter.com/tinybasejs/status/1570864399728136193): reactive datastore avec bindings React
+- 📦 [React-Tether 3.0](https://github.com/danreeves/react-tether/releases/tag/v3.0.0): une des toutes premières libs de positionnement pour React semble reprendre de l'activité
+- 📦 [TanStack Query 4.4](https://github.com/TanStack/query/releases/tag/v4.4.0): découplé de React, apporte le support d'un autre framework, SolidJS.
+- 🥳️ [Next.js a mergé 10000 pull-requests](https://twitter.com/github/status/1574750716966498304)
 
 <SubscribeFormEmbed />
 
@@ -44,25 +91,46 @@ import ReactContent from "./_react.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-import Sponsor2 from "./_sponsor2.mdx";
+[**Progressez dans votre anglais professionnel avec Cambly**](https://cambly.info/reacthebdo1)
 
-<Sponsor2 />
+Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteurs anglophones, quand et où vous voulez. Maîtriser le vocabulaire technique, interagir avec vos collègues ou clients à l'international ou travailler depuis n'importe où dans le monde, nos tuteurs s'adaptent à vos besoins, votre niveau et vos objectifs.
+
+[👉Faites un cours d'essai gratuit de 15 minutes et profitez de 50% de réduction sur votre abonnement](https://cambly.info/reacthebdo1)
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-import ReactNativeContent from "./_reactnative.mdx";
+**[RFC: File System-Based Native Routing with Expo and React Native](https://blog.expo.dev/rfc-file-system-based-routing-in-react-native-7a35474722a)**
 
-<ReactNativeContent />
+Evan Bacon travaille sur un nouveau routeur Expo basé sur des conventions file-system, similaires à Next.js ou Remix. Il nous explique tout ce qu'il faut savoir sur cette feature très attendue qui apporte la DX du web sur mobile. Cela devrait réduire considérablement le boilerplate de nos apps, mais aussi améliorer la discoverabilité, le deep linking, l'indexation, le chargement de données, la gestion des erreurs... Lire aussi ce [thread](https://twitter.com/Baconbrix/status/1574837248029331495) et écouter ce [podcast](https://podrocket.logrocket.com/expo-router).
+
+- 📦 [Announcing Ignite 8.0: “Maverick”](https://shift.infinite.red/announcing-ignite-8-0-maverick-fbbdafbb738e). Le boilerplate React-Native de InfiniteRed est très populaire reçoit une belle mise à jour. Nombreuses améliorations: unification Expo/Vanilla RN, redesign, i18n...
+- 📦 [FlashList 1.3 - MasonryFlashList](https://twitter.com/naqvitalha/status/1574416547426496513): pour reproduire un layout grid type Masonry/Pinterest en React-Native
+- 🥳️ [Les types TypeScripts ont été internalisés dans v0.71](https://twitter.com/thymikee/status/1572132314280300546). Plus besoin de `@types/react-native`.
+- 🥳️ [React-Native passe la barre des 1M downloads/week](https://twitter.com/thymikee/status/1574441040626552832)
+- 🐦 [0.70: amélioration notable des stacktraces](https://twitter.com/thymikee/status/1568257655323475972)
+- 🎨 [Amazon Interactive Video Service demo](https://twitter.com/nightstomp/status/1572576326934208513): React-Native plus performant que TikTok?
+- 🎨 [Software Mansion - Shared Element Transition + Reanimated sneak peek demo](https://twitter.com/swmansion/status/1572246971829608449)
+- 📜 [Testing React Native WebView with React Native Testing Library](https://coolsoftware.dev/testing-react-native-webview-with-react-native-testing-library/)
+- 🎙 [The React Native Show #16 - React Native at Microsoft](https://www.callstack.com/podcasts/react-native-at-microsoft-ep-16)
+- 🎙 [React-Native-Radio #247 - Revisiting common complaints about React Native 5 years later](https://reactnativeradio.com/episodes/rnr-247-revisiting-common-complaints-about-react-native-5-years-later-interview-with-hodeem)
+- 🔗️ [There's a Snack for That](https://www.snackforthat.com/): collection de Snacks Expo
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-import Jobs from "./_jobs.mdx";
+🧑‍💼 [**Matters - Senior Software Engineer (React/Node)**](https://bit.ly/NLReactH)
 
-<Jobs />
+Envie de challenges et de contribuer à des réussites entrepreneuriales ? Rejoins notre startup studio pour construire des produits variés et complexes dans une culture devOps, une stack JS, des code reviews, tests et déploiements automatisés. Paris, remote flexible, 50K€-65K€.
+
+🧑‍💼 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+
+Plateforme leader de l’épargne en ligne.
+Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
+Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
+Paris 75008 - 2j de TT/sem.
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
@@ -70,12 +138,24 @@ import Jobs from "./_jobs.mdx";
 
 ## 🔀 Autre {#other}
 
-import OtherContent from "./_other.mdx";
-
-<OtherContent />
+- [Qwik and Qwik City have reached beta!](https://www.builder.io/blog/qwik-and-qwik-city-have-reached-beta): framework novateur, concurrent à React, basé sur la résumabilité plutôt que l'hydratation
+- [TypeScript 4.9 beta](https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-beta/): nouvelle feature `satisfies` est très attendue!
+- [Token CSS](https://twitter.com/tokencss/status/1571823928187633664): alternative à Tailwind?
+- [Updates from the 92nd TC39 meeting](https://dev.to/hemanth/updates-from-the-92nd-tc39-meeting-5fi6): petite update
+- [Cloudflare - workerd: the Open Source Workers runtime](https://blog.cloudflare.com/workerd-open-source-workers-runtime/)
+- [Meta - MemLab: An open source framework for finding JavaScript memory leaks](https://engineering.fb.com/2022/09/12/open-source/memlab/)
+- [Type-Level TypeScript](https://type-level-typescript.com/)
+- TotalTypeScript [Tips](https://www.totaltypescript.com/tips) + [Zod tutorial](https://www.totaltypescript.com/tutorials/zod)
+- [Ezno, new type-checking compiler for JavaScript](https://twitter.com/robpalmer2/status/1573244310644199425)
+- [Turborepo 1.5](https://twitter.com/turborepo/status/1573017581459488769)
+- [tRPC 10 beta](https://twitter.com/alexdotjs/status/1571807618254905344)
+- [2022 Web Almanac](https://almanac.httparchive.org/en/2022/)
+- [Chrome Developers - Container queries begin to land in stable browsers](https://developer.chrome.com/blog/cq-polyfill/)
+- [WebKit Features in Safari 16.0](https://webkit.org/blog/13152/webkit-features-in-safari-16-0/)
+- [Best practices for creating a modern npm package](https://snyk.io/blog/best-practices-create-modern-npm-package/)
 
 ---
 
-import Meme from "./_meme.mdx";
+## 🤭 Fun {#fun}
 
-<Meme />
+[![Next.js routing showing a ridiculously complex file-system based routing tree](/emails/issues/117/meme.png)](https://twitter.com/thekitze/status/1568300470107783168)
