add fr content section

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
@@ -136,6 +136,16 @@ Paris 75008 - 2j de TT/sem.
 
 ---
 
+## 🇫🇷 En français {#fr}
+
+Pas de contenu cette semaine 😅
+
+💡Tu peux m'envoyer tes articles en me répondant à [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+
+<Todo />
+
+---
+
 ## 🔀 Autre {#other}
 
 - [Qwik and Qwik City have reached beta!](https://www.builder.io/blog/qwik-and-qwik-city-have-reached-beta): framework novateur, concurrent à React, basé sur la résumabilité plutôt que l'hydratation
