--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -43,15 +43,25 @@ import Support from "../_support.mdx";
 
 ## 📱 React-Native {#react-native}
 
-<Todo/>
+<Todo />
 
 ---
 
-## 🧑‍💻 Jobs {#jobs}
+## 🧑‍💻Jobs {#jobs}
 
-<Todo/>
+<Todo />
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
+
+---
+
+## 🇫🇷 En français {#fr}
+
+Pas de contenu cette semaine 😅
+
+💡Tu peux m'envoyer tes articles en me répondant à [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+
+<Todo />
 
 ---
 
@@ -63,5 +73,4 @@ import Support from "../_support.mdx";
 
 ## 🤭 Fun {#fun}
 
-<Todo/>
-
+<Todo />
